--- a/src/common/pagination/pagination.scss
+++ b/src/common/pagination/pagination.scss
@@ -3,8 +3,8 @@ a {
 }
 
 .page-item.active .page-link {
-    background-color: #1e74ca;
-    border-color: #1e74ca;
+    background-color: #0c4680;
+    border-color: #0c4680;
     &:hover {
         color: black;
         background-color: #e4ecf3;
