--- a/src/common/table/table.scss
+++ b/src/common/table/table.scss
@@ -9,7 +9,7 @@
 .sticky-header th {
     position: sticky;
     top: -1px;
-    background: #1e74ca 0% 0% no-repeat padding-box;
+    background: #0c4680 0% 0% no-repeat padding-box;
     color: #ffffff;
     font-size: 12px;
     padding: 0.5rem;
